Added login form and basic authentication

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,194 +1,1 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  font-size: 100%;
-  vertical-align: baseline;
-}
-
-html {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
-  vertical-align: middle;
-}
-
-q, blockquote {
-  quotes: none;
-}
-q:before, q:after, blockquote:before, blockquote:after {
-  content: "";
-  content: none;
-}
-
-a img {
-  border: none;
-}
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
-  display: block;
-}
-
-html, body {
-  font-family: "Open Sans", helvetica, sans-serif;
-  height: 100%;
-  background-color: #efeff4;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Open Sans", helvetica, sans-serif;
-  font-weight: 400;
-  line-height: 1.5em;
-}
-h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
-  font-weight: 400;
-  font-size: 65%;
-}
-
-h1 {
-  font-size: 24px;
-}
-
-h2 {
-  font-size: 20px;
-}
-
-h3 {
-  font-size: 16px;
-}
-
-h4 {
-  font-size: 12px;
-}
-
-h5 {
-  font-size: 10px;
-}
-
-h6 {
-  font-size: 8px;
-}
-
-a {
-  color: #9d9e9f;
-  font-family: "Open Sans", helvetica, sans-serif;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #167efb;
-}
-
-header {
-  border-bottom: solid 3px #167efb;
-  background-color: #26282a;
-  color: #9d9e9f;
-  height: 50px;
-  position: relative;
-}
-header ul {
-  width: auto;
-  height: auto !important;
-  display: inline;
-}
-header h1, header h3 {
-  line-height: 50px;
-}
-header .left {
-  float: left !important;
-  margin-left: 50px;
-  text-transform: uppercase;
-}
-header .right {
-  float: right !important;
-  margin-right: 50px;
-}
-
-aside {
-  background-color: #f5f6f7;
-  width: 15%;
-  height: 100%;
-  float: left;
-  display: block;
-  position: fixed;
-}
-
-nav {
-  margin-top: 20px;
-  text-transform: uppercase;
-}
-nav ul li a {
-  line-height: 4em;
-  margin-left: 50px;
-  font-size: 70%;
-}
-
-#content {
-  float: left;
-  position: relative;
-  margin-left: 15%;
-}
-
-.wrapper {
-  display: table;
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-  max-width: 400px;
-}
-
-.login-content {
-  display: table-cell;
-  text-align: center;
-  vertical-align: middle;
-}
-
-.input {
-  width: 100%;
-  border: 0;
-  border-radius: 0;
-  color: #000;
-  padding: 10px;
-  margin: 5px 0;
-  border-bottom: 1px solid #e2e2e4;
-}
-
-.button {
-  width: 100px;
-  margin: 5px 0;
-  border: 0;
-  height: 40px;
-  line-height: 40px;
-  cursor: pointer;
-  color: #fff;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-background-clip: padding-box;
-  background-clip: padding-box;
-  background-color: #2789e4;
-}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}html{line-height:1}ol,ul{list-style:none}table{border-collapse:collapse;border-spacing:0}caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}q,blockquote{quotes:none}q:before,q:after,blockquote:before,blockquote:after{content:"";content:none}a img{border:none}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary{display:block}html,body{font-family:"Open Sans",helvetica,sans-serif;height:100%;background-color:#efeff4}h1,h2,h3,h4,h5,h6{font-family:"Open Sans",helvetica,sans-serif;font-weight:400;line-height:1.5em}h1 small,h2 small,h3 small,h4 small,h5 small,h6 small{font-weight:400;font-size:65%}h1{font-size:24px}h2{font-size:20px}h3{font-size:16px}h4{font-size:12px}h5{font-size:10px}h6{font-size:8px}a{color:#9d9e9f;font-family:"Open Sans",helvetica,sans-serif;text-decoration:none}a:hover{color:#167efb}header{border-bottom:solid 3px #167efb;background-color:#26282a;color:#9d9e9f;height:50px;position:relative}header ul{width:auto;height:auto !important;display:inline}header h1,header h3{line-height:50px}header .left{float:left !important;margin-left:50px;text-transform:uppercase}header .right{float:right !important;margin-right:50px}aside{background-color:#f5f6f7;width:190px;height:100%;float:left;display:block;position:fixed}nav{margin-top:20px;text-transform:uppercase}nav ul li a{line-height:4em;margin-left:50px;font-size:70%}#content{float:left;position:relative;margin-left:15%}.wrapper{display:table;width:100%;height:100%;margin:0 auto;max-width:400px}.login-content{display:table-cell;text-align:center;vertical-align:middle}.input{width:100%;border:0;border-radius:0;color:#000;padding:10px;margin:5px 0;border-bottom:1px solid #e2e2e4}.button{width:100px;margin:5px 0;border:0;height:40px;line-height:40px;cursor:pointer;color:#fff;-webkit-border-radius:5px;border-radius:5px;-webkit-background-clip:padding-box;background-clip:padding-box;background-color:#2789e4}
