--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -13,4 +13,4 @@ $header-background-color: #26282A;
 
 // == Left Navigation
 $aside-background-color: #F5F6F7;
-$aside-width: 15%;
+$aside-width: 190px;
