--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,16 +1,22 @@
 
 // == Colors
 $brand-primary: #167EFB;
+$body-color: #EDEDED;
 
 // == Fonts
 $font-primary: 'Open Sans', helvetica, sans-serif;
 $font-primary-color: #9D9E9F;
 
 // == Header
-$header-border-width: 3px;
+$header-border-width: 0px;
 $header-border-color: $brand-primary;
-$header-background-color: #26282A;
+$header-background-color: #fff;
+$header-height: 80px;
 
 // == Left Navigation
-$aside-background-color: #F5F6F7;
-$aside-width: 190px;
+$aside-background-color: #15161C;
+$aside-width: 210px;
+$aside-link-color: #fff;
+
+// == Content
+$content-width: $aside-width + 1;
