--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -20,14 +20,12 @@ form {
   vertical-align: middle;
 }
 
-input[type=text], input[type=password] {
+input[type=text], input[type=password], input[type=email] {
   width: 100%;
-  border: 0;
-  border-radius: 0;
   color: #000;
   padding: 10px;
   margin: 5px 0;
-  border-bottom: 1px solid #e2e2e4;
+  border: 0;
 }
 
 input[type=submit] {
@@ -43,4 +41,17 @@ input[type=submit] {
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   background-color: #2789e4;
+}
+
+select {
+  display: block;
+  width: 100%;
+  height: 38px;
+  margin: 5px 0;
+
+  line-height: 1.42857;
+  color: #555555;
+  vertical-align: middle;
+  background-color: white;
+  border: 0;
 }
