--- a/app/views/site/index.html.slim
+++ b/app/views/site/index.html.slim
@@ -1,16 +1,10 @@
-aside
-  nav
-    ul
-      - if current_user
 
-        li
-          a href=dashboard_path Dashboard
-        li
-          a href=logout_path Logout
+.wrapper
+  .site-content
+    - if current_user
+      = link_to "Application", dashboard_path, class: "button"
+      = link_to "Log Out", logout_path, class: "button"
 
-      - else
-
-        li
-          a href=login_path Login
-        li
-          a href=register_path Register
+    - else
+      = link_to "Login", login_path, class: "button"
+      = link_to "Register", register_path, class: "button"
