--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,9 +1,18 @@
 @import "variables";
 
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 html, body {
   font-family: $font-primary;
   height: 100%;
   background-color: $body-color;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -46,6 +55,13 @@ a:hover {
   color: $brand-primary;
 }
 
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+    outline: none;
+}
+
 // Header
 
 header {
@@ -66,16 +82,35 @@ header {
   }
 
   .left {
-    margin-left: 50px;
+    margin-left: 20px;
+    height: 100%;
     text-transform: uppercase;
   }
 
   .right {
     float: right;
-    margin-right: 50px;
+    margin-right: 20px;
+  }
+
+  .header-form {
+    .icon-over-input {
+      position: relative;
+      width: 400px;
+    }
+
+    .icon-over-input [class^="fa fa-"] {
+      position: absolute;
+      right: 10px;
+      top: 9px;
+    }
   }
 
 }
+
+.table {
+  display: table;
+}
+
 
 // Navigation
 
@@ -167,6 +202,24 @@ footer {
   padding: 10px;
   margin: 5px 0;
   border-bottom: 1px solid #e2e2e4;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.42857;
+  color: #555555;
+  vertical-align: middle;
+  background-color: white;
+  border: 1px solid #cccccc;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out 0.15s, -webkit-box-shadow ease-in-out 0.15s;
+  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
 }
 
 .button {
